--- a/colorGame.css
+++ b/colorGame.css
@@ -1,1 +1,12 @@
-p {}
+.square {
+	width: 30%;
+	padding-bottom: 30%;
+	margin: 1.66%;
+	float: left;
+	background: black;
+}
+
+#container {
+	margin: 0 auto;
+	max-width: 600px;
+}
