--- a/colorGame.css
+++ b/colorGame.css
@@ -1,9 +1,16 @@
+body {
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
+	font-weight: normal;
+	background-color: antiquewhite;
+}
 .square {
 	width: 30%;
 	padding-bottom: 30%;
 	margin: 1.66%;
 	float: left;
 	background: black;
+	border-radius: 10px;
 }
 
 #container {
@@ -12,12 +19,44 @@
 }
 
 #stripe {
-	display: flex;
-	justify-content: space-between;
+	text-align: center;
 	height: 30px;
+	display: flex;
+	justify-content: space-around;
+	background: whitesmoke;
+	margin: 0 0 10px 0;
 }
 
 .selected {
-	background-color: blue;
+	background-color: steelBlue;
 	color: white;
+}
+
+h1 {
+	text-align: center;
+	padding: 20px 0;
+	background-color: steelBlue;
+	text-transform: uppercase;
+	color: white;
+	margin: 0;
+}
+
+#colorDisplay {
+	font-size: 200%;
+}
+
+button {
+	border: none;
+	background: none;
+	text-transform: uppercase;
+	height: 100%;
+	letter-spacing: 1px;
+	font-size: inherit;
+	color: steelBlue;
+	font-weight: bold;
+}
+
+button:hover {
+	color: white;
+	background-color: steelBlue;
 }
